# systemd

./: .gitignore  .packit.yml  MAINTAINERS.md  Makefile-man.am  Makefile.am  NEWS  README  TODO  configure.ac  meson.build  meson.version  meson_options.txt
.github/: dependabot.yml
.semaphore/: semaphore-runner.sh
catalog/: systemd.catalog.in
docs/: CODING_STYLE.md  CONTAINER_INTERFACE.md  CONTROL_GROUP_INTERFACE.md  ENVIRONMENT.md  MEMORY_PRESSURE.md  PORTABILITY_AND_STABILITY.md
hwdb/: 60-evdev.hwdb  60-keyboard.hwdb
hwdb.d/: meson.build  parse_hwdb.py
man/: bootctl.xml  busctl.xml  common-variables.xml  coredump.conf.xml  crypttab.xml  custom-entities.ent.in  daemon.xml  homectl.xml  hostname.xml  hostnamectl.xml  importctl.xml  journalctl.xml  journald.conf.xml  kernel-command-line.xml  kernel-install.xml  less-variables.xml  loader.conf.xml  localectl.xml  logind.conf.xml  machine-id.xml  machinectl.xml  meson.build  nss-myhostname.xml  org.freedesktop.LogControl1.xml  org.freedesktop.locale1.xml  org.freedesktop.login1.xml  org.freedesktop.resolve1.xml  org.freedesktop.systemd1.xml  org.freedesktop.timedate1.xml  pstore.conf.xml  repart.d.xml  sd_bus_add_object.xml  sd_bus_emit_signal.xml  sd_bus_error.xml  sd_bus_slot_set_floating.xml  sd_notify.xml  standard-conf.xml  systemctl.xml  systemd-analyze.xml  systemd-bless-boot.service.xml  (+45 more)
mkosi/: mkosi.conf  mkosi.postinst.chroot
profile.d/: 80-systemd-osc-context.sh
rules.d/: 50-udev-default.rules.in  60-cdrom_id.rules  60-persistent-storage.rules  (+3 more)
src/udev/compat/: meson.build  path_id_compat.c
(+994 files in other folders)
